--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "version": "1.0.0",
   "devDependencies": {
     "contextify": "~0.1.13",
-    "istanbul": "~0.3.13",
-    "jshint": "^2.7.0",
-    "vows": "~0.8.1"
+    "istanbul": "^0.4.2",
+    "jenkins-mocha": "^2.6.0",
+    "jshint": "^2.7.0"
   },
   "keywords": [
     "open_basedir",
     "file_accessdir"
   ],
-  "main": "./lib/index.js",
+  "main": "./index.js",
   "scripts": {
-    "pretest": "jshint ./lib/",
-    "raw": "vows -- --spec ./tests/*.js",
-    "test": "istanbul cover --print both vows -- --spec ./tests/*.js"
+    "pretest": "jshint ./index.js",
+    "test": "jenkins-mocha ./tests/*.js",
+    "posttest": "istanbul check-coverage"
   },
   "bugs": {
     "url": "http://github.com/yahoo/fs-lock/issues"
